# jrm-dev

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  GEMINI.md  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  tailwind.config.js
.github/workflows/: deploy.yml
NeoBrutalismeTemplate/: blog.html  cards.html  carousel.html  dash.html  heroes.html  index.html  login.html  portifolio.html  profile.html  sidebar.html  sidebar_correct.html  style.css
accounts/: apps.py  forms.py  urls.py
accounts/forms/: __init__.py  login_form.py
accounts/migrations/: 0001_initial.py
accounts/models/: user.py
accounts/views/: __init__.py  login_views.py
blog/: admin.py  admin_urls.py  urls.py
blog/filters/: __init__.py  post.py  public_post.py  tag.py
blog/forms/: __init__.py  post.py  tag.py
blog/migrations/: 0001_initial.py  0002_alter_post_slug_alter_tag_slug.py  0003_alter_post_search_vector_and_more.py
blog/models/: __init__.py  post.py  tag.py
blog/views/: __init__.py
blog/views/admin/: __init__.py  post_view.py  tag_view.py
blog/views/public/: __init__.py  post_view.py
conf/: uwsgi.ini
config/: asgi.py  settings.py  urls.py  wsgi.py
core/: apps.py  urls.py
core/logger/: __init__.py
core/models/: __init__.py  base_model.py  custom_fields.py  user_integration.py
core/static/css/: app.css  portfolio.css
core/static/css/src/: input.css
core/static/js/: app.js  portfolio.js
core/utils/: get_mails_utils.py
core/views/: __init__.py  mixins.py  painel_views.py
docs/tasks/: feat_cv_generator.md  feat_image_support.md  feat_manual_sorting.md  feat_markdown_support.md  front_animations.md  front_dark_mode.md  front_integration_ui.md  front_responsive_refinement.md  quality_ci_cd_validation.md  quality_portfolio_tests.md  quality_ruff_setup.md  quality_security_audit.md
locale/en/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
portfolio/: admin.py  apps.py  models.py  urls.py  views.py
portfolio/filters/: __init__.py  group_stack.py  project.py  stack.py
portfolio/fixtures/: groupstack__02.json  portifolio.json  stack__01.json  users__00.json
portfolio/forms/: __init__.py  group_stack.py  portfolio.py  project.py  stack.py
portfolio/migrations/: 0001_initial.py  0002_project_slug.py  0003_groupstack_created_at_groupstack_updated_at_and_more.py  0004_project_icon_project_stacks.py
portfolio/models/: __init__.py  group_stack.py  hero.py  portfolio.py  project.py  stack.py
portfolio/templates/widgets/: tiptap_editor.html
portfolio/views/: __init__.py  public_view.py
portfolio/views/admin/: __init__.py  configuration_view.py  group_stack_view.py  project_view.py  stack_view.py
portfolio/widgets/: __init__.py  tiptap_editor.py
templates/accounts/: base_login.html  header.html  login.html
templates/blog/admin/: post_detail.html  post_form.html  post_list.html  tag_list.html
templates/blog/admin/post/: post_detail.html  post_form.html  post_list.html
templates/blog/admin/tag/: tag_confirm_delete.html  tag_form.html  tag_list.html
templates/blog/public/: blog_detail.html  blog_list.html  footer.html  header.html
templates/blog/public/includes/: newsletter_cta.html  post_header.html  post_sidebar.html  related_posts.html
templates/components/: alert.html  sidebar.html
templates/components/admin/: page_header.html  pagination.html  table_action_dropdown.html
templates/core/: base_painel.html  base_public.html
templates/core/painel/: index.html
templates/portfolio/: about.html  footer.html  group_stack.html  header.html  hero.html  index.html  projects.html  skills.html
templates/portfolio/admin/configuration/: configuration.html
templates/portfolio/admin/group_stack/: group_stack_confirm_delete.html  group_stack_form.html  group_stack_list.html
templates/portfolio/admin/project/: project_confirm_delete.html  project_detail.html  project_form.html  project_list.html
templates/portfolio/admin/stack/: stack_confirm_delete.html  stack_detail.html  stack_form.html  stack_list.html
