[project]
name = "jrm_dev"
version = "0.1.0"
description = "Sistema particular para desenvolvimento e afins"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.2",
    "django-crispy-forms>=2.4",
    "django-debug-toolbar>=5.2.0",
    "django-environ>=0.12.0",
    "crispy_neurobrutalist",
    "dj-static>=0.0.6",
]

[tool.uv.sources]
crispy_neurobrutalist = { git = "https://github.com/JhonatanRian/crispy_neurobrutalist", tag = "v0.5.0" }

[[tool.uv.dependency-metadata]]
name = "crispy_neurobrutalist"
version = "0.5.0"
requires-dist = ["django", "django-crispy-forms"]


[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest-django>=4.10.0",
    "pytest-cov>=6.0.0",
    "model-bakery>=1.20.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=. --cov-report=term-missing --no-cov-on-fail"

[tool.coverage.run]
omit = [
    "*migrations*",
    "*tests*",
    "config/*",
    "manage.py",
    "venv/*",
    ".venv/*",
]

prd = [
    "uwsgi>=2.0.30",
]

[tool.mypy]
python_version = "3.12"
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]
disallow_untyped_defs = true
strict = false
allow_incomplete_defs = false
check_untyped_defs = true
allow_untyped_globals = true

exclude = [
    "venv/",
    ".venv/",
    "migrations/",
]

show_error_codes = true

[tool.django-stubs]
strict_settings = false
ignore_missing_model_attributes = true
django_settings_module = "config.settings"
