[project]
name = "jrm_dev"
version = "0.1.0"
description = "Sistema particular para desenvolvimento e afins"
requires-python = ">=3.12"
dependencies = [
  "django>=5.2.2",
  "django-crispy-forms>=2.4",
  "django-debug-toolbar>=5.2.0",
  "django-environ>=0.12.0",
  "crispy_neurobrutalist",
  "dj-static>=0.0.6",
  "django-filter>=25.2",
  "django-select2>=8.4.8",
  "pillow>=12.2.0",
  "psycopg2>=2.9.12",
]

[tool.uv.sources]
crispy_neurobrutalist = { git = "https://github.com/JhonatanRian/crispy_neurobrutalist", tag = "v0.6.3" }

[[tool.uv.dependency-metadata]]
name = "crispy_neurobrutalist"
version = "0.5.0"
requires-dist = ["django", "django-crispy-forms"]


[dependency-groups]
dev = [
  "mypy>=1.16.0",
  "pytest-django>=4.10.0",
  "pytest-cov>=6.0.0",
  "model-bakery>=1.20.0",
  "ruff>=0.15.13",
  "django-stubs>=6.0.4",
  "types-django-filter>=25.2.0.20260508",
  "djlint>=1.36.4",
]
prd = ["uwsgi>=2.0.30"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=. --cov-report=term-missing --no-cov-on-fail"

[tool.coverage.run]
omit = ["*migrations*", "*tests*", "config/*", "manage.py", "venv/*", ".venv/*"]


[tool.django-stubs]
strict_settings = false
ignore_missing_model_attributes = true
django_settings_module = "config.settings"

[tool.ruff]
# Target version
target-version = "py312"
# Line length
line-length = 88

[tool.ruff.lint]
# Enable specific rules
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "DJ",  # flake8-django
  "T20", # flake8-print
]
# Ignore specific rules
ignore = [
  "DJ001", # Avoid nullable string-based fields (e.g., social_name)
  "E501",  # Line too long (let formatter handle it where possible)
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["config", "accounts", "core", "portfolio"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyrefly]
project-excludes = [
    "**/venv/",
    "**/.venv/",
    "**/migrations/",
]
python-version = "3.12.0"
preset = "legacy"

[tool.djlint]
max_blank_lines = 1 
